[package]
name = "rs-market-maker"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
publish = false

[dependencies]
anyhow = "1.0.102"
alloy = { version = "2.0.5", default-features = false, features = ["signer-local", "signers"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
dotenvy = "0.15.7"
kuest-client-sdk = { path = "vendor/rs-clob-client", features = ["clob", "gamma"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
